v0.17:
    - `f90nml.write()` works for normal (non-`Namelist`) dicts
    - `Parser` properties moved outside of function arguments, and are now
      handled with property decorators (as in `Namelist`)

v0.16:
    - User-defined comment delimiters (e.g. `#` comment support)

v0.15:
    - Null values are now always followed by commas

v0.14:
    - Default logical parsing is now more strict.  Only `true`, `false`, `t`,
      and `f` (and with surrounding `.`) are now parsed to equivalent values.
    - Extensive documentation update

v0.13:
    - Multidimensional array support

v0.12:
    - Namelist output formatting (column width, indent, etc.)
    - Improved user-defined type output support
    - Arch (AUR) distribution configuration
    - Setuptools is now the install default

v0.11:
    - TODO