@@ -2,6 +2,7 @@ v0.17:
     - `f90nml.write()` works for normal (non-`Namelist`) dicts
     - `Parser` properties moved outside of function arguments, and are now
       handled with property decorators (as in `Namelist`)
+    - Namelists built from (unsorted) dicts are now pre-sorted by key
 
 v0.16:
     - User-defined comment delimiters (e.g. `#` comment support)
